<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.ilgiz.matica.fragments.StatisticFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBG"
        android:gravity="top|center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorBTN"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:layout_marginRight="40dp"
                android:text="@string/ui_your_statistics"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:textSize="23dp"/>

            <ImageView
                android:id="@+id/ivShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="1dp"
                android:layout_marginTop="2dp"
                android:background="@mipmap/ic_share"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


        <TextView
            android:id="@+id/textViewMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:text=""
            android:textAlignment="center"
            android:paddingTop="18dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/ui_all"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="29dp"/>

        <TextView
            android:id="@+id/tvCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="1"
            android:textColor="@color/colorWhite"
            android:textSize="200dp"/>

        <Button
            android:id="@+id/btnRestart"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_button"
            android:text="@string/ui_restart"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>
</FrameLayout>
